# steno

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  steno.example.yaml
helpers/: update_requirements.py
steno/cli/: main.py
steno/clients/: llm.py  openai.py
steno/managers/: config.py  log.py
steno/managers/transcript/: base.py  github.py
tests/: client_openai_test.py  test_client_openai.py
